fixed card title alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -177,6 +177,7 @@ img {
 }
 
 .card__text--title {
+    margin: 0.5rem;
     color: black
 }
 
@@ -213,7 +214,7 @@ img {
 }
 
 .info__left__item--bottom {
-    margin-top: 2.5rem;
+    margin: 3rem 0 0 0;
 }
 
 /*COURSES*/
